fix(firefox-mobile): fix dynamic url tab making white space appear at bottom

--- a/tailwind-src/styles.css
+++ b/tailwind-src/styles.css
@@ -10,3 +10,7 @@
 #instructions_cards a {
   @apply underline text-emerald-700 hover:text-emerald-500; 
 }
+
+body {
+  @apply bg-stone-800
+}
